Moving the pagetitles to the topbar

--- a/app/apps/authenticatie/templates/authenticatie/gebruiker_aanpassen.html
+++ b/app/apps/authenticatie/templates/authenticatie/gebruiker_aanpassen.html
@@ -4,6 +4,11 @@
 {% block title %}
     Gebruiker wijzigen | Beheer | PlanR
 {% endblock title %}
+{% block header %}
+    {% with pageTitle="Gebruikers" %}
+        {% include "snippets/pageheader.html" %}
+    {% endwith %}
+{% endblock header %}
 {% block body %}
     <turbo-frame id="beheer" data-turbo-action="advance">
     <div class="page__beheer">
