--- a/app/apps/authorisatie/templates/auth/group_list.html
+++ b/app/apps/authorisatie/templates/auth/group_list.html
@@ -2,13 +2,19 @@
 {% block title %}
     Rechtengroepen | Beheer | PlanR
 {% endblock title %}
+{% block header %}
+    {% with pageTitle="Rechtengroepen" %}
+        {% include "snippets/pageheader.html" %}
+    {% endwith %}
+{% endblock header %}
 {% block body %}
     <turbo-frame id="beheer" data-turbo-action="advance">
     <div class="page__beheer" data-controller="row-search">
         <div>
             <a href="{% url 'beheer' %}"
                class="link--back"
-               data-turbo-action="advance">
+               data-turbo-action="advance"
+               data-turbo-frame="_top">
                 <svg width="25"
                      height="16"
                      viewBox="0 0 25 16"
@@ -20,7 +26,7 @@
             </a>
         </div>
         <div class="container__flex">
-            <h1>Rechtengroepen</h1>
+            <h1>Rechtengroep overzicht</h1>
             <a class="btn btn-action" href="{% url 'rechtengroep_aanmaken' %}">
                 <svg width="24"
                      height="24"
