--- a/app/apps/context/templates/context/context_form.html
+++ b/app/apps/context/templates/context/context_form.html
@@ -3,6 +3,11 @@
 {% block title %}
     Rol aanmaken | Beheer | PlanR
 {% endblock title %}
+{% block header %}
+    {% with pageTitle="Rollen" %}
+        {% include "snippets/pageheader.html" %}
+    {% endwith %}
+{% endblock header %}
 {% block body %}
     <turbo-frame id="beheer" data-turbo-action="advance">
     <div class="page__beheer">
