--- a/app/apps/main/templates/taaktype_categorie/taaktype_categorie_aanpassen.html
+++ b/app/apps/main/templates/taaktype_categorie/taaktype_categorie_aanpassen.html
@@ -4,6 +4,14 @@
 {% block title %}
     Wijzig Taaktype Categorie | Beheer | PlanR
 {% endblock title %}
+{% block title %}
+    Taaktype Categorieën | Beheer | PlanR
+{% endblock title %}
+{% block header %}
+    {% with pageTitle="Taaktype Categorieën" %}
+        {% include "snippets/pageheader.html" %}
+    {% endwith %}
+{% endblock header %}
 {% block body %}
     <turbo-frame id="beheer" data-turbo-action="advance">
     <div class="page__beheer">
