--- a/app/apps/authenticatie/templates/authenticatie/gebruiker_profiel.html
+++ b/app/apps/authenticatie/templates/authenticatie/gebruiker_profiel.html
@@ -5,6 +5,11 @@
 {% block title %}
     {{ object.email|get_field_from_gebruiker_middels_email }} | Profiel | PlanR
 {% endblock title %}
+{% block header %}
+    {% with pageTitle="Gebruikers" %}
+        {% include "snippets/pageheader.html" %}
+    {% endwith %}
+{% endblock header %}
 {% block body %}
     <turbo-frame id="gebruiker_profiel">
     {% block messages %}
