--- a/app/apps/beheer/templates/beheer/beheer.html
+++ b/app/apps/beheer/templates/beheer/beheer.html
@@ -4,27 +4,34 @@
 {% block title %}
     Beheer | PlanR
 {% endblock title %}
+{% block header %}
+    {% with pageTitle="Beheer" %}
+        {% include "snippets/pageheader.html" %}
+    {% endwith %}
+{% endblock header %}
 {% block body %}
     <turbo-frame id="beheer" data-turbo-action="advance">
-    <h1>Beheer</h1>
     <ul class="list--blocks-horizontal">
         <li>
-            <a href="{% url 'gebruiker_lijst' %}">Gebruikers</a>
+            <a href="{% url 'gebruiker_lijst' %}" data-turbo-frame="_top">Gebruikers</a>
         </li>
         <li>
-            <a href="{% url 'context_lijst' %}">Rollen</a>
+            <a href="{% url 'context_lijst' %}"
+               data-turbo-frame="_top"
+               data-turbo-frame="_top">Rollen</a>
         </li>
         <li>
-            <a href="{% url 'rechtengroep_lijst' %}">Rechtengroepen</a>
+            <a href="{% url 'rechtengroep_lijst' %}" data-turbo-frame="_top">Rechtengroepen</a>
         </li>
         <li>
-            <a href="{% url 'standaard_externe_omschrijving_lijst' %}">Standaard teksten</a>
+            <a href="{% url 'standaard_externe_omschrijving_lijst' %}"
+               data-turbo-frame="_top">Standaard teksten</a>
         </li>
         <li>
-            <a href="{% url 'taaktype_categorie_lijst' %}">Taaktype categorieën</a>
+            <a href="{% url 'taaktype_categorie_lijst' %}" data-turbo-frame="_top">Taaktype categorieën</a>
         </li>
         <li>
-            <a href="{% url 'release_note_lijst' %}">Release notes</a>
+            <a href="{% url 'release_note_lijst' %}" data-turbo-frame="_top">Release notes</a>
         </li>
     </ul>
     <h2>Andere Forzamor beheer {{ APP_ENV }} omgevingen</h2>
