--- a/app/apps/dashboard/templates/dashboard/base.html
+++ b/app/apps/dashboard/templates/dashboard/base.html
@@ -7,6 +7,11 @@
 {% block title %}
     Dashboard | PlanR
 {% endblock title %}
+{% block header %}
+    {% with pageTitle="Dashboard" %}
+        {% include "snippets/pageheader.html" %}
+    {% endwith %}
+{% endblock header %}
 {% block body_class %}
     wide--xl
 {% endblock body_class %}
@@ -17,7 +22,7 @@
             <div class="container__title">
                 <h1>
                     {% block content_title %}
-                        Dashboard
+                        Actueel
                     {% endblock content_title %}
                 </h1>
                 <div class="filters">
