--- a/app/apps/release_notes/templates/beheer/release_note_list.html
+++ b/app/apps/release_notes/templates/beheer/release_note_list.html
@@ -3,11 +3,16 @@
 {% block title %}
     Release notes | PlanR
 {% endblock title %}
+{% block header %}
+    {% with pageTitle="Release notes" %}
+        {% include "snippets/pageheader.html" %}
+    {% endwith %}
+{% endblock header %}
 {% block body %}
     <turbo-frame id="beheer" data-turbo-action="advance">
     <div class="page__beheer" data-controller="row-search">
         <div>
-            <a href="{% url 'beheer' %}" class="link--back">
+            <a href="{% url 'beheer' %}" class="link--back" data-turbo-frame="_top">
                 <svg width="25"
                      height="16"
                      viewBox="0 0 25 16"
@@ -19,7 +24,7 @@
             </a>
         </div>
         <div class="container__flex">
-            <h1>Release Notes</h1>
+            <h1>Release notes overzicht</h1>
             <a class="btn btn-action btn-240"
                href="{% url 'release_note_aanmaken' %}"
                data-turbo="false">
