--- a/app/frontend/assets/styles/components/_filters.scss
+++ b/app/frontend/assets/styles/components/_filters.scss
@@ -10,6 +10,7 @@
         > div {
             flex: 0 1 20%;
             min-width: 250px;
+            max-height: 2.3em;
         }
 
         @media (min-width: map-get($grid-breakpoints, md)) {
