--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -57,6 +57,8 @@ html {
         main {
             padding: 1em 0.75em 0;
             margin-bottom: 5em;
+            max-width: 2000px;
+            margin: 0 auto;
         }
     }
 }
