--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -53,6 +53,8 @@ html {
             height: 67px;
             width: 100%;
             background-color: transparent;
+            position: relative;
+            z-index: 1;
         }
         main {
             padding: 1em 0.75em 0;
