--- a/app/frontend/assets/styles/_theme.scss
+++ b/app/frontend/assets/styles/_theme.scss
@@ -27,6 +27,7 @@ $greenblue: #00846d;
 $red-tint02: #d70d0d;
 $yellow-400: #fff1ce;
 $red-400: #ffd5d5;
+$blue-100: #f7f9fa;
 $blue-200: #eaeef1;
 $blue-900: #244048;
 $gray-600: #7f838a;
