--- a/app/frontend/assets/styles/components/_navigation.scss
+++ b/app/frontend/assets/styles/components/_navigation.scss
@@ -13,35 +13,42 @@
 }
 
 .container__nav--tertiary {
-    margin: 0 auto;
-    width: 100%;
-    max-width: map-get($container-max-widths, xxl);
-    display: flex;
-    justify-content: flex-end;
-
-    .wide--xl & {
-        max-width: 1250px;
-    }
+    width: 200px;
 }
 
 .list-nav--tertiary {
     @include list-clean();
-    margin: 12px 16px 12px 0;
-    display: flex;
-    li:not(:last-child) {
-        margin-right: 20px;
+    padding: 0;
+    li {
+        padding: 0.5em 0.7em;
+        margin-bottom: 2px;
+
+        &:not(:last-child) {
+            border-bottom: 1px solid $blue-200;
+        }
     }
     a {
-        color: $gray-tint11;
+        font-weight: 700;
         text-decoration: none;
+        color: $black;
+        font-size: 0.8em;
+        padding: 0.5em 1em 0.5em 2.5em;
+        display: block;
+        position: relative;
 
         svg {
-            vertical-align: text-bottom;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            left: 0.5em;
+            path {
+                fill: currentColor;
+            }
         }
 
         &:hover,
         &:focus {
-            color: $green-tint01;
+            background-color: $blue-100;
             svg {
                 path {
                     fill: $green-tint01;
@@ -57,8 +64,8 @@
     flex-direction: column;
     justify-content: space-between;
     overflow: hidden;
-    background-color: $gray-tint01;
     z-index: 20;
+    background-color: $blue-100;
     h1 {
         font-size: 1.2em;
         white-space: nowrap;
@@ -75,7 +82,7 @@
         text-decoration: none;
         font-weight: 700;
         display: block;
-        padding: 10px 8px 10px 36px;
+        padding: 10px 8px 10px 27px;
         font-size: 0.7em;
         min-height: 38px;
         box-sizing: border-box;
@@ -97,6 +104,9 @@
 
         span {
             padding: 0;
+        }
+        > span {
+            margin-left: 9px;
         }
 
         &:hover,
@@ -149,7 +159,7 @@
             border: none;
             width: 100%;
             text-align: left;
-            padding: 14px 0 14px 48px;
+            padding: 14px 0 14px 39px;
             height: 45px;
             cursor: pointer;
 
@@ -198,6 +208,11 @@
         }
     }
 
+    .badge--unread-count {
+        transform: translate(0, -10%);
+        transition: transform $transition-duration-default $transition-ease-default;
+    }
+
     .nav--small & {
         .nav--wide {
             display: none;
@@ -214,9 +229,18 @@
         }
 
         .menu-toggle {
-            padding: 14px 0 14px 48px;
+            padding: 14px 0 14px 39px;
             svg {
                 transform: scaleX(1) translateY(-50%);
+            }
+        }
+
+        .badge--unread-count {
+            width: 12px;
+            height: 12px;
+            transform: translate(-15px, -6px);
+            span {
+                display: none;
             }
         }
     }
