Added button scroll-to-top

--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -453,6 +453,12 @@
                             </div>
                         </div>
                     </div>
+                    <button data-detail-target="btnToTop"
+                            data-action="detail#scrollToTop"
+                            class="btn btn-to-top">
+                        {% include "icons/arrow-double.svg" %}
+                        Terug naar boven
+                    </button>
                 </div>
                 <div class="modal"
                      data-detail-target="modalAfhandelen"
