--- a/app/frontend/assets/styles/components/_pageHeader.scss
+++ b/app/frontend/assets/styles/components/_pageHeader.scss
@@ -21,12 +21,10 @@
         }
 
         .container__user {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            padding: 0 1.2em;
+            padding: 1em 1.2em;
 
             .container__uitklapper {
+                white-space: nowrap;
                 > span {
                     font-weight: 700;
                     text-decoration: none;
