Fix a11y profile links

--- a/app/apps/main/templates/snippets/pageheader.html
+++ b/app/apps/main/templates/snippets/pageheader.html
@@ -5,7 +5,7 @@
         {% if pageTitle %}<h1 class="pagetitle h2">{{ pageTitle }}</h1>{% endif %}
     </div>
     <div class="container__user">
-        <div class="container__uitklapper" tabindex="0">
+        <div class="container__uitklapper">
             <span>
                 <span>{{ request.user|gebruikersnaam }}</span>
                 <svg width="20"
