--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -247,6 +247,11 @@
         padding: $input-padding-x;
         box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
         display: none;
+        opacity: 0;
+        transition-property: opacity, display;
+        transition-duration: $transition-duration-default;
+        transition-timing-function: $transition-ease-default;
+        transition-behavior: allow-discrete;
 
         ul {
             margin: 0;
@@ -286,9 +291,13 @@
     }
 
     &:hover,
-    &:focus {
+    &:focus-within {
         .legenda {
             display: block;
+            opacity: 1;
+            @starting-style {
+                opacity: 0;
+            }
         }
     }
 }
