--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -704,6 +704,10 @@ body.no-js {
     padding-bottom: 1em !important;
 }
 
+.padding--left {
+    padding-left: 1em !important;
+}
+
 .margin--bottom {
     margin-bottom: 1em !important;
 }
