--- a/app/apps/dashboard/templates/dashboard/afgehandeld/dashboard.html
+++ b/app/apps/dashboard/templates/dashboard/afgehandeld/dashboard.html
@@ -49,9 +49,7 @@
         </section>
         <section class="section--seperated--l">
             <div class="grid-container grid-container--full"
-                 data-controller="chart-utils">
-                {% include "charts/base_chart.html" with title="Doorlooptijden" description="Midoffice duur is bepaald door de optelling van alle tijd dat de melding in controle staat en de optelling van dat de melding op openstaand staat. De uitvoer duur wordt bepaald door de optellingen van alle keren dat de melding in behandeling staat. Wachten wordt berekend door de duur van alle pauze statussen op te tellen. De afgehandeld duur wordt bepaald doordat de melding heropend is, dus dan heeft de melding meer dan 1 afgehandeld status." period_title=title tabs=afgehandeld_tabs options=stacked_bars_options data_type="duration" only %}
-            </div>
+                 data-controller="chart-utils">{{ DoorlooptijdenAfgehandeldeMeldingen.stacked_chart_tabs }}</div>
         </section>
         <section class="section--seperated--l">
             <div class="grid-container grid-container--full"
