--- a/app/apps/dashboard/templates/charts/dashboard_item.html
+++ b/app/apps/dashboard/templates/charts/dashboard_item.html
@@ -1,11 +1,18 @@
 {% load is_float_or_int seconds_to_human from date_tags %}
+{% load json_encode from json_tags %}
 <div class="dashboard-item">
     <div>
         <span class="h6">
             {% include "icons/dashboard.svg" %}
         {{ period_title }}</span>
         <h4>{{ title }}</h4>
-        <p>{{ description }}</p>
+        <p>
+            {{ description }}
+            <a data-controller="csv-download"
+               data-csv-download-data-value='{{ body|json_encode }}'
+               data-csv-download-title-value='{{ title|slugify }}'
+               href="#">download csv</a>
+        </p>
     </div>
     <div class="container__table lazy" data-controller="lazyload-table-bar">
         <table class="dashboard">
