#mor-187: dashboard nieuwe taken, schoon heel en veilig

--- a/app/apps/dashboard/templates/dashboard/taken/nieuwe_taakopdrachten.html
+++ b/app/apps/dashboard/templates/dashboard/taken/nieuwe_taakopdrachten.html
@@ -14,6 +14,10 @@
     <div class="screen-xl">
         <section class="section--seperated--l">
             <div class="grid-container grid-container--full"
+                 data-controller="chart-utils">{{ NieuweTaakopdrachten.stacked_chart_tabs }}</div>
+        </section>
+        <section class="section--seperated--l">
+            <div class="grid-container grid-container--full"
                  data-controller="chart-utils">
                 {% include "charts/base_chart.html" with title="Nieuwe taken" description="" period_title=title tabs=nieuwe_taakopdrachten_tabs only %}
             </div>
