--- a/app/apps/dashboard/templates/charts/dashboard_item.html
+++ b/app/apps/dashboard/templates/charts/dashboard_item.html
@@ -5,14 +5,17 @@
         <span class="h6">
             {% include "icons/dashboard.svg" %}
         {{ period_title }}</span>
-        <h4>{{ title }}</h4>
-        <p>
-            {{ description }}
+        <div class="container__flex">
+            <h4>{{ title }}</h4>
             <a data-controller="csv-download"
                data-csv-download-data-value='{{ body|json_encode }}'
-               data-csv-download-title-value='{{ title|slugify }}'
-               href="#">download csv</a>
-        </p>
+               data-csv-download-title-value='{{ title|slugify }}_{{ period_title|slugify }}'
+               href="#"
+               aria-label="Download csv"
+               title="Download csv"
+               class="padding--left">{% include "icons/download.svg" %}</a>
+        </div>
+        <p>{{ description }}</p>
     </div>
     <div class="container__table lazy" data-controller="lazyload-table-bar">
         <table class="dashboard">
