--- a/app/apps/dashboard/templates/charts/dashboard_item.html
+++ b/app/apps/dashboard/templates/charts/dashboard_item.html
@@ -2,11 +2,11 @@
 {% load json_encode from json_tags %}
 <div class="dashboard-item">
     <div>
-        <span class="h6">
-            {% include "icons/dashboard.svg" %}
-        {{ period_title }}</span>
         <div class="container__flex">
-            <h4>{{ title }}</h4>
+            <span class="h6">
+                {% include "icons/dashboard.svg" %}
+                {{ period_title }}
+            </span>
             <a data-controller="csv-download"
                data-csv-download-data-value='{{ body|json_encode }}'
                data-csv-download-title-value='{{ title|slugify }}_{{ period_title|slugify }}'
@@ -15,6 +15,7 @@
                title="Download csv"
                class="padding--left">{% include "icons/download.svg" %}</a>
         </div>
+        <h4>{{ title }}</h4>
         <p>{{ description }}</p>
     </div>
     <div class="container__table lazy" data-controller="lazyload-table-bar">
