--- a/app/apps/dashboard/templates/charts/dashboard_item.html
+++ b/app/apps/dashboard/templates/charts/dashboard_item.html
@@ -11,8 +11,8 @@
                data-csv-download-data-value='{{ body|json_encode }}'
                data-csv-download-title-value='{{ title|slugify }}_{{ period_title|slugify }}'
                href="#"
-               aria-label="Download csv"
-               title="Download csv"
+               aria-label="download volledige tabel als .csv"
+               title="download volledige tabel als .csv"
                class="padding--left">{% include "icons/download.svg" %}</a>
         </div>
         <h4>{{ title }}</h4>
